# gpt-oss-interpretability

./: .gitignore  ATTENTION_PATH_SENSITIVITY_REPORT.md  BRIDGE_CASE_GENERATION_SPEC.md  CHANNELIZED_XT_INTERVENTION_NOTE.md  DIRECT_VOCAB_DEMO_REPORT.md  DIRECT_VOCAB_STEERING_RESEARCH_PROGRAM.md  DOC_INDEX.md  EMBEDINIT_XT_XE_INTERVENTION_REPORT.md  EXECUTION_PLAN.md  EXPERIMENT_WORKFLOW.md  FINDINGS.md  FIRST_DIRECT_VOCAB_STEERING_EXPERIMENT.md  GEOMETRIC_FRAMEWORK.md  GOSSH_PLAN.md  INTERMEDIATE_LAYERS_ANALYSIS.md  PER_CHANNEL_XT_INTERVENTION_PLAN.md  README.md  READOUT_DECOMPOSITION_REPORT.md  RESEARCH_CONNECTIONS.md  RESEARCH_IDEAS.md  THREAD_MAP.md  TODO.md  XT_XE_INTERVENTION_REPORT.md  lab-notebook-excursions.md  lab-notebook.md  prompts_capitalization.txt  prompts_coreference.txt  prompts_induction.txt  prompts_recency_bias.txt  prompts_syntax_agreement.txt  pyproject.toml  scaffold_refactor.py
configs/: dry_run_recency.py  gpt_oss_20b_template.py  head_ablation_L20.py  soft_main_component_decomposition.py  soft_main_component_decomposition_delta.py  soft_main_late_layer_delta_sweep.py  soft_main_late_layer_sweep.py
examples/: howto_bregman_conditioning.py  howto_layer_ablation.py  howto_logit_lens.py  howto_moe_routing.py
gossh/: README.md  __init__.py  config.py  model_registry.py
gpt_oss_interp/: __init__.py  config.py
references/: DISTILLATION_LITERATURE.md  STEERING_VECTORS_LITERATURE.md  SYMBOLIC_TRANSFORMER_ARCHITECTURE.md
scripts/: analyze_filtered_benchmark.py  analyze_hydra.py  analyze_single_case.py  calibrate_convergence.py  capture_routing.py  (+17 more)
(+370 files in other folders)
